<resources>
    <string name="app_name">App Học Tiếng Anh</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App Học Tiếng Anh</string>
    <string name="nav_header_subtitle">Một Sản Phẩm Của Nhóm Minh-Huế-Sang</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang Chủ</string>
    <string name="menu_education">Học Kết Hợp</string>
    <string name="menu_contest">Thi Trên Máy</string>
    <string name="menu_calendar">Thời Gian Biểu</string>
    <string name="menu_class">Lớp Học</string>
    <string name="menu_account">Tài Khoản</string>

    <string name="title_activity_giao_dien_chinh">GiaoDienChinh</string>

    <string name="tieng_anh_cntt">Tiếng Anh Công Nghệ Thông Tin</string>
    <string name="ten_tai_khoan">Tên Tài Khoản</string>
    <string name="ma_sinh_vien">Mã sinh viên</string>
    <string name="password">******</string>
    <string name="nhap_vao_msv">Nhập Vào Mã Sinh Viên</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="nhap_vao_mk">Nhập Vào Mật Khẩu</string>
    <string name="luu_mat_khau">Lưu Mật Khẩu</string>

    <string name="ten_dang_nhap_bi_sai">Tên đăng nhập bị sai!!</string>
    <string name="mat_khau_bi_sai">"Mật khẩu bị sai!!"</string>

    <string name="btnSubmit">Nộp Bài</string>
    <string name="btnSeeAnswer">Xem Kết Qủa</string>
</resources>