<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/ic_learning"
            android:title="@string/menu_education" />
        <item
            android:id="@+id/nav_contest"
            android:icon="@drawable/ic_contest"
            android:title="@string/menu_contest"
            />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar"
            />
        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_school"
            android:title="@string/menu_class"
            />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_account"
            />
    </group>
</menu>