<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_learning">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hitcyclone317.projectAndroidCuoiKhoa.FragmentMenu.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_learning"
        android:name="com.hitcyclone317.projectAndroidCuoiKhoa.FragmentMenu.LearningFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_learning" />

    <fragment
        android:id="@+id/nav_contest"
        android:name="com.hitcyclone317.projectAndroidCuoiKhoa.FragmentMenu.ContestFragment"
        android:label="@string/menu_contest"
        tools:layout="@layout/fragment_contest" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.hitcyclone317.projectAndroidCuoiKhoa.FragmentMenu.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_class"
        android:name="com.hitcyclone317.projectAndroidCuoiKhoa.FragmentMenu.ClassFragment"
        android:label="@string/menu_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.hitcyclone317.projectAndroidCuoiKhoa.FragmentMenu.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account"
        />
</navigation>